# Rust

./: CONTRIBUTING.md  GETTING_STARTED.md  GLOSSARY.md  INDEX.md  LEARNING_PATHS.md  PROJECT_IDEAS.md  PROJECT_STRUCTURE.md  README.md  RESOURCES.md  Rust_Bible.md  TROUBLESHOOTING.md
04_Expert/E01_Custom_Protocol/: Cargo.toml
04_Expert/E01_Custom_Protocol/src/: crypto.rs  error.rs  frame.rs  handshake.rs  lib.rs  main.rs  session.rs  transport.rs
04_Expert/E02_Sandbox/: Cargo.toml
04_Expert/E02_Sandbox/src/: capabilities.rs  error.rs  filesystem.rs  lib.rs  main.rs  namespace.rs  seccomp.rs
04_Expert/E03_Binary_Instrumentation/: Cargo.toml
04_Expert/E03_Binary_Instrumentation/src/: elf.rs  error.rs  lib.rs
Assessments/: Chapter_01_Fundamentals_Quiz.md  Chapter_03_RedTeam_Quiz.md  README.md
CTF_Challenges/: README.md
CTF_Challenges/solutions/: README.md
Case_Studies/: CS01_Compromised_Server.md  CS02_Data_Breach_Hunt.md  CS03_Red_Team_Tool.md  CS04_Incident_Response.md  CS05_Malware_Analysis.md  README.md
Chapter_01_Fundamentals/: 01_Getting_Started.md  02_Variables_Types.md  03_Control_Flow.md  04_Ownership.md  05_Structs_Enums.md  06_Error_Handling.md  07_Collections.md  08_Traits.md  README.md
Chapter_02_Skill_Levels/: README.md
Chapter_02_Skill_Levels/01_Basic/: README.md
Chapter_02_Skill_Levels/01_Basic/B01_Hello_Security/: Cargo.toml  README.md
Chapter_02_Skill_Levels/01_Basic/B01_Hello_Security/src/: main.rs
Chapter_02_Skill_Levels/01_Basic/B03_File_Ops/: Cargo.toml  README.md
Chapter_02_Skill_Levels/01_Basic/B03_File_Ops/src/: main.rs
Chapter_02_Skill_Levels/01_Basic/B04_Environment/: Cargo.toml  README.md
Chapter_02_Skill_Levels/01_Basic/B04_Environment/src/: main.rs
Chapter_02_Skill_Levels/01_Basic/B05_Process_Info/: Cargo.toml  README.md
Chapter_02_Skill_Levels/01_Basic/B05_Process_Info/src/: main.rs
Chapter_02_Skill_Levels/01_Basic/B06_HTTP_Client/: Cargo.toml  README.md
Chapter_02_Skill_Levels/01_Basic/B06_HTTP_Client/src/: main.rs
Chapter_02_Skill_Levels/01_Basic/B07_JSON_Parsing/: Cargo.toml  README.md
Chapter_02_Skill_Levels/01_Basic/B07_JSON_Parsing/src/: main.rs
Chapter_02_Skill_Levels/01_Basic/B08_Base64/: Cargo.toml  README.md
Chapter_02_Skill_Levels/01_Basic/B08_Base64/src/: main.rs
Chapter_02_Skill_Levels/01_Basic/B09_Hash_Calculator/: Cargo.toml  README.md
Chapter_02_Skill_Levels/01_Basic/B09_Hash_Calculator/src/: main.rs
Chapter_02_Skill_Levels/01_Basic/B10_Directory_Walker/: Cargo.toml  README.md
Chapter_02_Skill_Levels/01_Basic/B10_Directory_Walker/src/: main.rs
Chapter_02_Skill_Levels/01_Basic/B11_String_Search/: Cargo.toml  README.md
Chapter_02_Skill_Levels/01_Basic/B11_String_Search/src/: main.rs
Chapter_02_Skill_Levels/01_Basic/B12_Timestamp_Parser/: Cargo.toml  README.md
Chapter_02_Skill_Levels/01_Basic/B12_Timestamp_Parser/src/: main.rs
Chapter_02_Skill_Levels/01_Basic/B13_IP_Validator/: Cargo.toml  README.md
Chapter_02_Skill_Levels/01_Basic/B13_IP_Validator/src/: main.rs
Chapter_02_Skill_Levels/01_Basic/B14_URL_Parser/: Cargo.toml  README.md
Chapter_02_Skill_Levels/01_Basic/B14_URL_Parser/src/: main.rs
Chapter_02_Skill_Levels/01_Basic/B15_Regex_Matcher/: Cargo.toml  README.md
Chapter_02_Skill_Levels/01_Basic/B15_Regex_Matcher/src/: main.rs
Chapter_02_Skill_Levels/02_Intermediate/: README.md
Chapter_02_Skill_Levels/02_Intermediate/I02_Network_Enum/: Cargo.toml  README.md
Chapter_02_Skill_Levels/02_Intermediate/I02_Network_Enum/src/: main.rs
Chapter_02_Skill_Levels/02_Intermediate/I03_Password_Cracker/: Cargo.toml  README.md
Chapter_02_Skill_Levels/02_Intermediate/I03_Password_Cracker/src/: main.rs
Chapter_02_Skill_Levels/02_Intermediate/I04_Log_Analyzer/: Cargo.toml  README.md
Chapter_02_Skill_Levels/02_Intermediate/I04_Log_Analyzer/src/: main.rs
Chapter_02_Skill_Levels/02_Intermediate/I05_File_Integrity_Monitor/: Cargo.toml  README.md
Chapter_02_Skill_Levels/02_Intermediate/I05_File_Integrity_Monitor/src/: main.rs
Chapter_02_Skill_Levels/02_Intermediate/I06_Service_Scanner/: Cargo.toml  README.md
Chapter_02_Skill_Levels/02_Intermediate/I06_Service_Scanner/src/: main.rs
Chapter_02_Skill_Levels/02_Intermediate/I07_Hex_Dump/: Cargo.toml
Chapter_02_Skill_Levels/02_Intermediate/I08_Async_Operations/: Cargo.toml  README.md
Chapter_02_Skill_Levels/02_Intermediate/I08_Async_Operations/src/: main.rs
Chapter_02_Skill_Levels/02_Intermediate/I09_DNS_Resolver/: Cargo.toml  README.md
Chapter_02_Skill_Levels/02_Intermediate/I09_DNS_Resolver/src/: main.rs
Chapter_02_Skill_Levels/02_Intermediate/I10_Banner_Grabber/: Cargo.toml  README.md
Chapter_02_Skill_Levels/02_Intermediate/I10_Banner_Grabber/src/: main.rs
Chapter_03_Red_Team/: README.md
Chapter_03_Red_Team/01_Reconnaissance/: 01_Port_Scanning.md  02_Web_Scanning.md  README.md
Chapter_04_Blue_Team/: README.md
Chapter_04_Blue_Team/01_Detection/: 01_Log_Analysis.md  README.md
Chapter_05_Automation/: 01_System_Tasks.md  README.md
Chapter_06_Technical_Addendum/: README.md
Chapter_07_GUI_Development/: README.md
Chapter_08_Malware_Analysis/: README.md
Chapter_08_Malware_Analysis/01_Static_Analysis/: Cargo.toml  README.md
Chapter_08_Windows_Security/: 01_Windows_API.md  README.md
Chapter_09_IDS_Development/: README.md
Chapter_09_IDS_Development/01_Packet_Capture/: Cargo.toml  README.md
Chapter_09_IDS_Development/03_IP_Reputation/: README.md
Chapter_10_Real_World_Scenarios/: README.md
Chapter_10_Real_World_Scenarios/01_Basic/: README.md
Cookbook/: README.md
Lab_Environment/: README.md  docker-compose.yml
Projects/: README.md
Projects/IOCScanner/: Cargo.toml  README.md
Projects/IOCScanner/src/: database.rs  main.rs  output.rs  scanner.rs
Quick_Reference/: Async_Tokio_Cheatsheet.md  Common_Crates.md  Cross_Compilation.md  Rust_Security_Cheatsheet.md
Templates/: README.md
Templates/cli_tool/: Cargo.toml
Templates/cli_tool/src/: config.rs  main.rs  output.rs
Templates/network_scanner/: Cargo.toml
Templates/network_scanner/src/: main.rs  output.rs
(+136 files in other folders)
