[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"
authors = ["Security Researcher"]
description = "Process sandboxing using Linux namespaces, seccomp-bpf, and capabilities"
license = "MIT"
readme = "README.md"
keywords = ["sandbox", "security", "namespaces", "seccomp", "linux"]
categories = ["os", "security"]

[dependencies]
# Linux-specific
libc = "0.2"
nix = { version = "0.27", features = ["user", "sched", "mount", "fs", "process", "signal"] }
caps = "0.5"

# Seccomp
seccompiler = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization for seccomp rules
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Process utilities
procfs = "0.16"

[dev-dependencies]
tempfile = "3.9"

[features]
default = []
dangerous-tests = []  # Run tests that require root

[[bin]]
name = "sandbox"
path = "src/main.rs"

[[bin]]
name = "sandbox_demo"
path = "src/bin/demo.rs"
