[package]
name = "ioc_scanner"
version = "1.0.0"
edition = "2021"
description = "Indicator of Compromise Scanner - Detect malicious artifacts in systems"
authors = ["Rust Security Bible"]
license = "MIT"
repository = "https://github.com/example/ioc-scanner"
keywords = ["security", "ioc", "threat-detection", "forensics"]
categories = ["command-line-utilities"]

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }

# Async runtime
tokio = { version = "1.34", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File system
walkdir = "2.4"
notify = "6.1"

# Hashing
sha2 = "0.10"
md-5 = "0.10"
hex = "0.4"

# Pattern matching
regex = "1.10"
aho-corasick = "1.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"
indicatif = "0.17"
log = "0.4"
env_logger = "0.10"
rayon = "1.8"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1

[[bin]]
name = "iocscan"
path = "src/main.rs"
