[package]
name = "cli_tool_template"
version = "0.1.0"
edition = "2021"
description = "Security CLI Tool Template"
authors = ["Your Name <your@email.com>"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"
env_logger = "0.10"
log = "0.4"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1
