[package]
name = "network_scanner_template"
version = "0.1.0"
edition = "2021"
description = "Network Scanner Template for Security Tools"
authors = ["Your Name <your@email.com>"]

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }

# Async runtime
tokio = { version = "1.34", features = ["full"] }

# Networking
socket2 = { version = "0.5", features = ["all"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"
indicatif = "0.17"
log = "0.4"
env_logger = "0.10"

# IP address parsing
ipnetwork = "0.20"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1
