[package]
name = "http_client"
version = "0.1.0"
edition = "2021"
authors = ["Security Researcher"]
description = "Security-focused HTTP client for making GET/POST requests with security analysis"
license = "MIT"

[dependencies]
# Command-line argument parsing with derive macros
clap = { version = "4.4", features = ["derive"] }
# Enhanced error handling with context
anyhow = "1.0"
# Custom error types with derive macros
thiserror = "1.0"
# Colored terminal output for better visibility
colored = "2.0"
# HTTP client library - blocking for simplicity
reqwest = { version = "0.11", features = ["blocking", "json", "cookies"] }
# URL parsing and manipulation
url = "2.5"
# Serialization for JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# For header parsing
http = "0.2"

[dev-dependencies]
# None needed - we use external servers for testing
