[package]
name = "json_parsing"
version = "0.1.0"
edition = "2021"
authors = ["Security Researcher"]
description = "Security-focused JSON parsing and manipulation tool"
license = "MIT"

[dependencies]
# Command-line argument parsing with derive macros
clap = { version = "4.4", features = ["derive"] }
# Enhanced error handling with context
anyhow = "1.0"
# Custom error types with derive macros
thiserror = "1.0"
# Colored terminal output for better visibility
colored = "2.0"
# JSON parsing and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# JSONPath query support
jsonpath-rust = "0.3"

[dev-dependencies]
# None needed for this project
