[package]
name = "url_parser"
version = "0.1.0"
edition = "2021"
authors = ["Security Researcher"]
description = "Parse URLs and extract components - Essential for web security analysis"
license = "MIT"

[dependencies]
# clap - Command Line Argument Parser
clap = { version = "4.4", features = ["derive"] }
# url - URL parsing and manipulation
url = "2.5"
# colored - Terminal coloring
colored = "2.1"
# serde - Serialization
serde = { version = "1.0", features = ["derive"] }
# serde_json - JSON output
serde_json = "1.0"
# percent-encoding - URL encoding/decoding
percent-encoding = "2.3"
# idna - Internationalized Domain Names
idna = "0.5"
# publicsuffix - Public Suffix List for domain parsing
publicsuffix = "2.2"

[dev-dependencies]
tempfile = "3.10"
