[package]
name = "file_integrity_monitor"
version = "0.1.0"
edition = "2021"
authors = ["Security Researcher"]
description = "File integrity monitoring system using cryptographic hashes"
license = "MIT"

[dependencies]
# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }
# Cryptographic hashing
sha2 = "0.10"
blake3 = "1.5"
# File system notifications
notify = "6.1"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Date/time
chrono = { version = "0.4", features = ["serde"] }
# Error handling
anyhow = "1.0"
# Colored output
colored = "2.0"
# Progress bar
indicatif = "0.17"
# Directory walking
walkdir = "2.4"
# Parallel iteration
rayon = "1.8"
# Hex encoding
hex = "0.4"
# Database for storing baselines
rusqlite = { version = "0.30", features = ["bundled"] }

[profile.release]
opt-level = 3
lto = true
