[package]
name = "service_scanner"
version = "0.1.0"
edition = "2021"
authors = ["Security Researcher"]
description = "Advanced service detection and banner grabbing tool"
license = "MIT"

[dependencies]
# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }
# Async runtime
tokio = { version = "1.34", features = ["full"] }
# Async networking
tokio-util = { version = "0.7", features = ["codec"] }
# SSL/TLS support
tokio-native-tls = "0.3"
native-tls = "0.2"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Error handling
anyhow = "1.0"
# Colored output
colored = "2.0"
# Progress indicators
indicatif = "0.17"
# Regex for banner parsing
regex = "1.10"
lazy_static = "1.4"
# Futures utilities
futures = "0.3"
# IP network handling
ipnetwork = "0.20"
# Hex encoding
hex = "0.4"

[profile.release]
opt-level = 3
lto = true
