[package]
name = "banner_grabber"
version = "0.1.0"
edition = "2021"
authors = ["Security Developer"]
description = "Grab service banners from network ports for reconnaissance"
license = "MIT"
keywords = ["banner", "grabbing", "security", "reconnaissance", "network"]

[dependencies]
# Tokio async runtime
tokio = { version = "1.35", features = ["full"] }
# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }
# Colored terminal output
colored = "2.1"
# Error handling
thiserror = "1.0"
anyhow = "1.0"
# Serialization for output formats
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Async utilities
futures = "0.3"
# Regex for banner parsing
regex = "1.10"
# Tables for pretty output
tabled = "0.14"
# SSL/TLS support
tokio-native-tls = "0.3"
native-tls = "0.2"

[[bin]]
name = "banner_grabber"
path = "src/main.rs"
